--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -3,6 +3,16 @@ body {
 }
 .ice-nav {
 	border-radius: 0;
+	background-color: #4FC3F7; 
+}
+.ice-nav a:hover {
+	color: #000;
+}
+.ice-nav-ul > li > a:hover{
+	background-color: #29B6F6;
+}
+a {
+	color: #011;
 }
 .ice-header {
 	margin-top: 20px;
