--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -1,31 +1,42 @@
 body {
 	font-family: 'Lato', sans-serif;
+	padding-top: 60px;
+}
+.form-control{
+	border-radius: 2px;
+}
+.btn {
+	border-radius: 2px;
+}
+.ice-view-all {
+	margin: 473px 5px 10px;
 }
 .ice-view-all a{
 	color: #333;
 }
 .ice-view-all a:hover {
-	color: #333;
+	color: #222;
 	text-decoration: none;
 }
 .ice-nav {
 	border-radius: 0;
-	background-color: #4FC3F7; 
+	background: whitesmoke;
+	border-bottom: 1px solid gray;
 }
 .ice-nav a:hover {
-	color: #000;
+	color: darkcyan;
 }
 .ice-nav-ul > li > a {
 	text-shadow: initial;
-	color: #222;
+	color: darkcyan;
 }
 .ice-nav-ul > li > a:hover{
-	background-color: #29B6F6;
+	background-color: lightgray;
 	text-shadow: initial;
 }
 .navbar-brand {
 	text-shadow: initial;
-	color: #222;
+	color: darkcyan;
 }
 a {
 	color: #000;
@@ -46,6 +57,10 @@ a {
 }
 .ice-carousel-caption > h3 {
 	margin-bottom: 3px;
+	color: darkcyan;
+}
+.ice-carousel-caption > p {
+	color: #d9edf7;
 }
 .ice-carousel-indicators {
 	bottom: 0;
@@ -61,7 +76,7 @@ a {
 .ice-genre {
 	border: 1px solid gray;
 	text-align: center;
-	padding: 30px 15px;
+	padding: 100px 15px;
 }
 .ice-genre:hover {
 	background-color: rgba(0, 0, 0, 0.1);
