--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -117,3 +117,9 @@ a {
 	background: #ccc;
 	cursor: pointer;
 }
+#description > div > div{
+	margin-bottom: 5px;;
+}
+#description > div > div:first-child {
+	font-weight: bold;
+}
