--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -123,3 +123,12 @@ a {
 #description > div > div:first-child {
 	font-weight: bold;
 }
+.form-group .select2-container {
+  position: relative;
+  z-index: 2;
+  float: left;
+  width: 100%;
+  margin-bottom: 0;
+  display: table;
+  table-layout: fixed;
+}
